# py-adb

./: .gitignore  LICENSE  README.md  credeziali  launch_package.py  main.py  py_adb.py
adb_connector_python/: LICENSE  README.md  pyproject.toml
adb_connector_python/adb_connector_python/: connector.py
adb_connector_python/adb_connector_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: draw.py  gd_level1.py  tap_to_earn.py  unlock_and_call.py
