[project]
name="adb-connector-python"
version="1.1.5"
authors=[
    {name="Giuseppe Gravante"}
]
dependencies = [
    "termcolor"
]

description="A simple python package to interface with adb"
readme="README.md"
requires-python=">=3.7"
license={file="LICENSE"}

[build-system]
requires=["setuptools","wheel"]
build-backend="setuptools.build_meta"

[project.urls]
repository ="https://github.com/Giuseppe7887/py-adb"